fixed Centered submenu list. Add/remove 'nav-visible' class

--- a/css/style.css
+++ b/css/style.css
@@ -98,10 +98,9 @@ body {
   transition: all 0.5s;
 
   display: flex;
-  justify-content: center;
 
   padding-top: 2.4rem;
-  width: 45%;
+  width: 60%;
   height: 45vh;
 
   /* Steps:
